hphp/hack/test/typecheck/records/record_decl_duplicate_field.php
<?hh

record A {
  int x;
  string y;
  int x;
}
